<resources>
    <string name="app_name">Network Inspector</string>
    <string name="connection_type">No Connection</string>
    <string name="networkSSID">📡 SSID:</string>
    <string name="connection_strength">📶 Connection strength:</string>
    <string name="network_type">📍 Network type:</string>
    <string name="internet_access">🌐 Internet access:</string>
    <string name="ip_address">🔢 IP-address (local):</string>
    <string name="wifi_frequency">📶 Wi-Fi Frequency:</string>
    <string name="link_speed">🔄 Link speed:</string>
    <string name="mobile_operator">📱 Mobile operator:</string>
    <string name="network_country">🌍 Network country:</string>

</resources>