<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainblue"
    android:rotation="0"
    android:rotationX="0"
    android:rotationY="0"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appNameToolbar"
        android:layout_width="398dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:background="@color/sideblue"
        android:minHeight="?attr/actionBarSize"
        android:rotationX="-7"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="@font/alike"
        android:rotationX="-7"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textblue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/appNameToolbar"
        app:layout_constraintEnd_toEndOf="@+id/appNameToolbar"
        app:layout_constraintStart_toStartOf="@+id/appNameToolbar"
        app:layout_constraintTop_toTopOf="@+id/appNameToolbar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/connectionTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/alike"
        android:text="@string/connection_type"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textblue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameToolbar"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/signalStrengthImage"
        android:layout_width="125dp"
        android:layout_height="103dp"
        android:contentDescription="signal strength"
        app:layout_constraintBottom_toTopOf="@+id/connectionTypeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameToolbar"
        app:srcCompat="@drawable/signal_wifi_bad_24px"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="371dp"
        android:layout_height="130dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/othertextblue"
        android:clickable="true"
        android:contentDescription="refresh button"
        android:foregroundTint="@color/textblue"
        android:foregroundTintMode="add"
        android:longClickable="true"
        android:rotationX="7"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync"
        app:tint="@color/textblue"
        tools:visibility="visible" />

    <ScrollView
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/scrollblue"
        app:layout_constraintBottom_toTopOf="@+id/refreshButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionTypeText"
        app:layout_constraintVertical_bias="0.136"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollViewConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/linkSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/link_speed"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileOperatorText" />

            <TextView
                android:id="@+id/ipAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/ip_address"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SSIDText" />

            <TextView
                android:id="@+id/internetAccessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/internet_access"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ipAddressText"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/connectionStrengthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/connection_strength"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkSpeedText"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/networkTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/network_type"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/networkCountryText"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/SSIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/networkSSID"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/wifiFrequencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/wifi_frequency"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionStrengthText" />

            <TextView
                android:id="@+id/mobileOperatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/mobile_operator"
                android:textAlignment="center"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/networkTypeText" />

            <TextView
                android:id="@+id/networkCountryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:text="@string/network_country"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/othertextblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/internetAccessText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>